--- a/project/web/plugins/bootstrap3-editable/css/settings-editable.css
+++ b/project/web/plugins/bootstrap3-editable/css/settings-editable.css
@@ -2,3 +2,7 @@ edse span {
     cursor: pointer;
     border: 1px dashed!important;
 }
+
+.modal-settings input {
+    padding-left: 10px!important;
+}
