--- a/project/views/templates/startup-kit/components/top.html.twig
+++ b/project/views/templates/startup-kit/components/top.html.twig
@@ -186,7 +186,7 @@
             <div class="hero-mask-gradient"></div>
         </div><!--//hero-wrapper-->
         <div class="container heading-content">
-            <h2 class="headline">{{ data.text(sectionData.header, slug, path ~ '.header', editMode) }}{{ data.setImageButton(sectionData.background, slug, path ~ '.background', editMode, "/templates/startup-kit/images/hero/hero-about.jpg") }}{{ data.settingsButton(path, editMode) }}</h2>
+            <h2 class="headline">{{ data.text(sectionData.header, slug, path ~ '.header', editMode) }}{{ data.setImageButton(sectionData.background, slug, path ~ '.background', editMode, "/templates/startup-kit/images/hero/hero-about.jpg") }}</h2>
             <div class="intro">{{ data.text(sectionData.descriptor, slug, path ~ '.descriptor', editMode) }}</div>
             {% if editMode or sectionData.slideButton.url  %}
             <div class="actions">
@@ -196,8 +196,6 @@
             {% endif %}
         </div><!--//container-->
     </section><!--//heading-section-->
-
-    {{ data.settingsModal(sectionData, slug, path, { 'aa': { 'type': 'text' } }, editMode) }}
 
 {% endmacro %}
 
