--- a/project/views/templates/startup-kit/components/top.html.twig
+++ b/project/views/templates/startup-kit/components/top.html.twig
@@ -143,6 +143,10 @@
                     {value: 0, text: 'Отсутствует'},
                     {value: 1, text: 'Есть'}
                 ]
+            },
+            'testImage': {
+                'type': 'image',
+                'title': 'Картинка тест',
             }
         },
     editMode) }}
