--- a/project/views/templates/startup-kit/components/components.html.twig
+++ b/project/views/templates/startup-kit/components/components.html.twig
@@ -77,7 +77,7 @@
             <div id="feature-block-{{ key | raw }}" class="feature-block feature-block-{{ key | raw }}">
                 <div class="row">
                     <div class="feature-content col-md-4 col-sm-6 col-xs-12{% if feature.onTheLeft == "image" %} col-md-push-8 col-sm-push-6 col-xs-push-0{% endif %}">
-                        <h3 class="feature-title">{{ data.text(feature.title, slug, featurePath ~ '.title', editMode) }}{{ data.settingsButton(featurePath, editMode) }}</h3>
+                        <h3 class="feature-title">{{ data.text(feature.title, slug, featurePath ~ '.title', editMode) }}{{ data.settingsButton(featurePath, editMode) }}{{ data.removeElementButton(featurePath, slug, editMode) }}</h3>
                         <div class="feature-desc">
                             <p>{{ data.textarea(feature.description, slug, featurePath ~ '.description', editMode) }}</p>
                         </div><!--//feature-desc-->
@@ -91,6 +91,8 @@
             </div><!--//feature-block-->
             {{ data.settingsModal(feature, slug, featurePath, { 'onTheLeft': { 'type': 'select', 'title': 'Расположение', 'options': [{value: 'image', text: 'Картинка слева'}, {value: 'text', text: 'Картинка справа'}] } }, editMode) }}
         {% endfor %}
+
+        {{ data.addElementButton(path ~ '.features', slug, editMode, "Добавить блок с текстом и картинкой") }}
 
     </div><!--//feature-blocks-->
 
