--- a/project/views/templates/startup-kit/components/components.html.twig
+++ b/project/views/templates/startup-kit/components/components.html.twig
@@ -94,6 +94,8 @@
 
         {{ data.addElementButton(path ~ '.features', slug, editMode, "Добавить блок с текстом и картинкой") }}
 
+        {{ data.removeElementBigButton(path, slug, editMode, "Удалить все блоки") }}
+
     </div><!--//feature-blocks-->
 
 {% endmacro %}
