--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -39,7 +39,7 @@
                         Уверены, что хотите удалить этот элемент?
                     </div>
                     <div class="modal-footer">
-                        <a href="" type="button" class="btn btn-theme btn-primary" id="item-delete-button">Да</a>
+                        <button type="button" class="btn btn-theme btn-primary" id="confirm-delete-button">Да</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Нет</button>
                     </div>
                 </div>
