--- a/project/web/plugins/edit-tools/edit-tools.css
+++ b/project/web/plugins/edit-tools/edit-tools.css
@@ -20,3 +20,8 @@ reel span {
 .modal-settings input {
     padding-left: 10px!important;
 }
+
+.editor-image-list-element {
+    margin-right: 25px;
+    margin-bottom: 25px;
+}
