--- a/project/views/templates/startup-kit/components/top.html.twig
+++ b/project/views/templates/startup-kit/components/top.html.twig
@@ -214,7 +214,7 @@
             <div class="hero-mask-gradient"></div>
         </div><!--//hero-wrapper-->
         <div class="container heading-content">
-            <h2 class="headline">{{ data.text(sectionData.header, slug, path ~ '.header', editMode) }}{{ data.setImageButton(sectionData.background, slug, path ~ '.background', editMode, "/templates/startup-kit/images/hero/hero-about.jpg") }}{{ data.settingsButton(path, editMode) }}{{ data.removeElementButton(path, slug, editMode, "Удалить компонент") }}</h2>
+            <h2 class="headline">{{ data.text(sectionData.header, slug, path ~ '.header', editMode) }}{{ data.setImageButton(sectionData.background, slug, path ~ '.background', editMode, "/templates/startup-kit/images/hero/hero-about.jpg") }}{{ data.settingsButton(path, editMode) }}{{ data.removeElementButton(path, slug, editMode) }}</h2>
             <div class="intro">{{ data.text(sectionData.descriptor, slug, path ~ '.descriptor', editMode) }}</div>
             {% if sectionData.showSlideButton and (editMode or sectionData.slideButton.url) %}
             <div class="actions">
